@@ -144,6 +144,10 @@
       <name>Ricardo Trindade</name>
     </contributor>
     <contributor>
+      <name>Bram Van Dam</name>
+      <url>https://github.com/codematters</url>
+    </contributor>
+    <contributor>
       <name>Maxim Zhao</name>
     </contributor>
   </contributors>
